correctopn fautre orho

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
                  <img src="Logo_Savm.png" style="width: 7vw;">
                 <H2>INSCRIPTION SALON SAVM 2024</H2>
                 <label for="md">Exposition du 28 septembre au 20 octobre  2024 à 17h</label><BR><br>
-                <p class="sous_text">Toute ces informations sont récoltés par la société du salon des artistes du val de marne en toute sécurité. Toutes informations nécéssaires à l'inscription d'une ou plusieurs oeuvres, resterons privées.</p>
+                <p class="sous_text">Toutes ces informations sont récoltées par la Société du salon des artistes du val de marne en toute sécurité. Toutes informations nécéssaires à l'inscription d'une ou plusieurs oeuvres, resterons privées.</p>
             </div>
             <div>
                 <p class="sous_text" style="margin-top: auto;">Créer par Le salon des artistes du val de marne</p>
