ajout nom d'artiste

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,11 +64,7 @@
                                 </div>
                                 <div>
                                     <p style="margin-top: 16px;" class="slide-right">Identité<span class="obligatoire">*</span></p>
-                                    <div class="contain_Who slide-right">
-                                        <div class="Input_style2 slide-right" style="margin-bottom: 4px;">
-                                            <input type="text" id="contact_nom_artiste" name="NOM" required>
-                                            <label class="label" for="contact_nom_artiste">Nom d'artiste<span class="obligatoire">*</span></label>
-                                        </div>
+                                    <div class="contain_Who slide-right">                                        
                                         <div class="Input_style2 slide-right" style="margin-bottom: 4px;">
                                             <input type="text" id="contact_nom" name="NOM" required>
                                             <label class="label" for="contact_nom">Nom<span class="obligatoire">*</span></label>
@@ -76,6 +72,10 @@
                                         <div class="Input_style2 slide-right" style="margin-bottom: 4px;">
                                             <input type="text" id="contact_prenom" name="PRENOM" required>
                                             <label class="label" for="contact_prenom">Prénom</label>
+                                        </div>
+                                        <div class="Input_style2 slide-right" style="margin-bottom: 4px;">
+                                            <input type="text" id="contact_nom_artiste" name="NOM_ARTISTE"  >
+                                            <label class="label" for="contact_nom_artiste">Nom d'artiste</label>
                                         </div>
                                     </div>
                                     <p class="sous_text slide-right">(utilisé dans le catalogue)</p>
