--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/x-icon" href="Logo_Savm.png">
     <link href="https://fonts.googleapis.com/css2?family=Poly:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head> 
 
@@ -17,7 +18,7 @@
                 <!-- <img src=banniereSAVM.jpg> -->
                  <img src="Logo_Savm.png" style="width: 7vw;">
                 <H2>INSCRIPTION SALON SAVM 2025</H2>
-                <label for="md">Exposition du 28 septembre au 20 octobre  2024 à 17h</label><BR><br>
+                <label for="md">Exposition du samedi 13 septembre au dimanche 28 septembre 2025 à 17h</label><BR><br>
                 <p class="sous_text">Toutes ces informations sont récoltées par la Société du salon des artistes du val de marne en toute sécurité. Toutes informations nécéssaires à l'inscription d'une ou plusieurs oeuvres, resterons privées.</p>
             </div>
             <div>
@@ -412,9 +413,11 @@
                         <div>
                             <p style="margin-top: 16px;" class="slide-right">N° de SIRET</p>
                             <div class="Input_style slide-right">
-                                <input id="site" type="text" maxlength="14" size="14" placeholder="siret (14 Chifres)" pattern="[0-9]{14}" title="Dimensions" name="SIRET_MDA" >
+                                <input id="site" type="text" size="14" placeholder="siret (14 Chifres)" title="Dimensions" name="SIRET_MDA" >
                                 <label class="label" for="siret">Numéro de siret</label>
                             </div>
+                            <p>ADAGP</p>
+                            <p class="sous_text">Disponible pour une garde <a href="http://davic.mkdh.fr/savm-data/reglement-SAVM-2025.pdf" style="cursor: pointer;">(voir règlement)</a></p>
                             <div class="radio-input slide-right" style="gap: 16px;">
                                 <label for="md">
                                     <input type="radio" value="oui" id="md1" name="ADAGP"  required="required"/>
@@ -453,8 +456,8 @@
                         </div>
                         <p class="sous_text">Cette adresse web pourra être utilisée par Le SAVM sous forme de QR Code.</p>
                         <div class="Input_style slide-right">
-                            <textarea id="comment" name=REMARQUES rows="5" cols="60" placeholder="Un mini CV (5 lignes max)"  maxlength = "300" ></textarea>
-                            <label class="label" for="site">Un mini CV (5 lignes max)</label>
+                            <textarea id="comment" name=REMARQUES rows="5" cols="60"  maxlength = "300" ></textarea>
+                            <label class="label" for="site">Un mini CV</label>
                         </div>
                     </div>
 
@@ -462,7 +465,7 @@
                         <p style="margin-top: 16px;" class="slide-right">L'inscription sera <A style="text-decoration:none;color:black" href=renvoiImage.jsp>définitive</A> après avoir reçu le paiement (un seul chèque) (se reporter au règlement pour participation selon le format) à envoyer par courrier. "SAVM Ateliers d'Art 5 ter, avenue du Bac 94210 La Varenne Saint Hilaire" avec enveloppe de retour.
                         </p>
                         <div class="contain_Who slide-right" style="margin-top: 16px;">                
-                            <input id="REGLE_ADHESION" type="checkbox"  onclick='javascript:regles()'  title="Règles d'adhésion" NAME="REGLE_ADHESION" required><p>J'ai lu, compris et accepté les règles d'adhésion<span class="obligatoire">*</span> <a href="http://davic.mkdh.fr/savm-data/reglementsSAVM2023.pdf" target="Reglements SAVM" style="cursor: pointer;"> Lire le règlement 📄</a></p>
+                            <input id="REGLE_ADHESION" type="checkbox"  onclick='javascript:regles()'  title="Règles d'adhésion" NAME="REGLE_ADHESION" required><p>J'ai lu, compris et accepté les règles d'adhésion<span class="obligatoire">*</span> <a href="http://davic.mkdh.fr/savm-data/reglement-SAVM-2025.pdf" target="Reglements SAVM" style="cursor: pointer;"> Lire le règlement 📄</a></p>
                         </div>
                     </div>
                     <div style="margin-top: 16px;">
