--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -417,14 +417,24 @@
                                 <label class="label" for="siret">Numéro de siret</label>
                             </div>
                             <p>ADAGP</p>
-                            <p class="sous_text">Disponible pour une garde <a href="http://davic.mkdh.fr/savm-data/reglement-SAVM-2025.pdf" style="cursor: pointer;">(voir règlement)</a></p>
                             <div class="radio-input slide-right" style="gap: 16px;">
                                 <label for="md">
-                                    <input type="radio" value="oui" id="md1" name="ADAGP"  required="required"/>
+                                    <input type="radio" value="oui" id="md" name="ADAGP" />
                                     <p>Oui</p>
                                 </label>
                                 <label for="ms">
-                                    <input type="radio" value="non" id="ms1" name="ADAGP"  required="required">
+                                    <input type="radio" value="non" id="ms" name="ADAGP"/>
+                                    <p>Non</p>  
+                                </label>
+                            </div>  
+                            <p style="margin-top: 24px;">Disponible pour une garde <a href="http://davic.mkdh.fr/savm-data/reglement-SAVM-2025.pdf" style="cursor: pointer;">(voir règlement)</a></p>
+                            <div class="radio-input slide-right" style="gap: 16px;">
+                                <label for="md">
+                                    <input type="radio" value="oui" id="md" name="DISPO_GARDE" />
+                                    <p>Oui</p>
+                                </label>
+                                <label for="ms">
+                                    <input type="radio" value="non" id="ms" name="DISPO_GARDE" />
                                     <p>Non</p>  
                                 </label>
                             </div>   
