--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -426,52 +426,29 @@
                                     <input type="radio" value="non" id="ms" name="ADAGP"/>
                                     <p>Non</p>  
                                 </label>
-                            </div>  
-                            <p style="margin-top: 24px;">Disponible pour une garde <a href="http://davic.mkdh.fr/savm-data/reglement-SAVM-2025.pdf" style="cursor: pointer;">(voir règlement)</a></p>
+                            </div> 
+                            <p style="margin-top: 24px; margin-bottom: 8px;">Disponible pour une garde <a href="http://davic.mkdh.fr/savm-data/reglement-SAVM-2025.pdf" style="cursor: pointer;">(voir règlement)</a></p>
                             <div class="radio-input slide-right" style="gap: 16px;">
                                 <label for="md">
-                                    <input type="radio" value="oui" id="md" name="DISPO_GARDE" />
+                                    <input type="radio" value="oui" id="md1" name="DISPO_GARDE" />
                                     <p>Oui</p>
                                 </label>
                                 <label for="ms">
-                                    <input type="radio" value="non" id="ms" name="DISPO_GARDE" />
+                                    <input type="radio" value="non" id="ms1" name="DISPO_GARDE"/>
                                     <p>Non</p>  
                                 </label>
-                            </div>   
-                            <!-- </div>
-                            <div style="display: flex; flex-direction: column; ">
-                                <p>ADAGP</p>
-                                    <div class="radio-input slide-right">
-                                        <label for="md">
-                                            <input type="radio" value="oui" id="md1" name="ADAGP"/>
-                                            <p>Oui</p>
-                                        </label>
-                                        <label for="ms">
-                                            <input type="radio" value="non" id="ms1" name="ADAGP"/>
-                                            <p>Non</p>  
-                                        </label>
-                                    </div>
-                            </div>     -->
-                            <!-- <div class="contain_Who_check">ADAGP
-                                <input type="radio" value="oui" id="md1" name="ADAGP" >
-                                <label for="md">oui</label>
-                                <input type="radio" value="non" id="ms1" name="ADAGP" checked>
-                                <label for="ms">non</label>     
-                            </div> -->
-                    <input type="hidden" value="non" id="md1" name="DISPO_GARDE" >   
-                        <p style="margin-top: 16px;" class="slide-right">Votre site internet</p>    
-                        <div class="Input_style slide-right">
-                            <input id="site" type="text" maxlength="50" size="40"  title="Dimensions" NAME="SITE_INTERNET">
-                            <label class="label" for="site">www.VotreSite.fr</label>
+                            </div> 
+                            <p style="margin-top: 16px;" class="slide-right">Votre site internet</p>    
+                            <div class="Input_style slide-right">
+                                <input id="site" type="text" maxlength="50" size="40"  title="Dimensions" NAME="SITE_INTERNET">
+                                <label class="label" for="site">www.VotreSite.fr</label>
+                            </div>
+                            <p class="sous_text">Cette adresse web pourra être utilisée par Le SAVM sous forme de QR Code.</p>
+                            <div class="Input_style slide-right">
+                                <textarea id="comment" name=REMARQUES rows="5" cols="60"  maxlength = "300" ></textarea>
+                                <label class="label" for="site">Un mini CV</label>
+                            </div>
                         </div>
-                        <p class="sous_text">Cette adresse web pourra être utilisée par Le SAVM sous forme de QR Code.</p>
-                        <div class="Input_style slide-right">
-                            <textarea id="comment" name=REMARQUES rows="5" cols="60"  maxlength = "300" ></textarea>
-                            <label class="label" for="site">Un mini CV</label>
-                        </div>
-                    </div>
-
-                        
                         <p style="margin-top: 16px;" class="slide-right">L'inscription sera <A style="text-decoration:none;color:black" href=renvoiImage.jsp>définitive</A> après avoir reçu le paiement (un seul chèque) (se reporter au règlement pour participation selon le format) à envoyer par courrier. "SAVM Ateliers d'Art 5 ter, avenue du Bac 94210 La Varenne Saint Hilaire" avec enveloppe de retour.
                         </p>
                         <div class="contain_Who slide-right" style="margin-top: 16px;">                
